Updated page layout and styling. #1

--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,7 @@
   max-width: 575px;
   margin: 0 auto;
   padding: 0 1.5rem;
+  height: 100%;
 }
 
 .row {
@@ -16,6 +17,18 @@
 .column-full,
 .column-half {
   width: 100%;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.align-start {
+  align-items: flex-start;
 }
 
 @media screen and (min-width: 768px) {
