--- a/css/layout.css
+++ b/css/layout.css
@@ -15,6 +15,7 @@ header {
 
 main {
   margin: 0 auto;
+  padding: 2% 0;
 }
 
 h1 {
@@ -29,18 +30,6 @@ h1 {
 .column-full,
 .column-half {
   width: 100%;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.align-center {
-  align-items: center;
-}
-
-.align-start {
-  align-items: flex-start;
 }
 
 @media screen and (min-width: 768px) {
