--- a/css/styles.css
+++ b/css/styles.css
@@ -101,3 +101,25 @@ ul {
 .page-title {
   display: inline-block;
 }
+
+nav {
+  color: white;
+  font-size: 150%;
+  font-family: "Proza Libre", sans-serif;
+  margin: 0 3%;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: white;
+}
+
+.inline-block {
+  display: inline-block;
+}
