--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,9 @@
-main {
-  font-family: "Open Sans", sans-serif;
+* {
   background-color: #f0f0f0;
 }
 
-form {
-  height: 100%;
+main {
+  font-family: "Open Sans", sans-serif;
 }
 
 h1 {
@@ -26,6 +25,7 @@ header {
 }
 
 input {
+  background-color: #fff;
   display: block;
   border-radius: 3px;
   border: 1px solid lightgrey;
@@ -35,6 +35,7 @@ input {
 }
 
 textarea {
+  background-color: #fff;
   display: block;
   resize: none;
   width: 100%;
@@ -85,6 +86,7 @@ textarea:focus {
 }
 
 .title {
+  background-color: #562b81;
   margin-left: 1.5rem;
   padding: 1rem 0;
 }
@@ -103,13 +105,14 @@ ul {
 }
 
 nav {
-  color: white;
+  background-color: inherit;
   font-size: 150%;
   font-family: "Proza Libre", sans-serif;
   margin: 0 3%;
 }
 
 a {
+  background-color: #562b81;
   text-decoration: none;
 }
 
