--- a/css/layout.css
+++ b/css/layout.css
@@ -27,6 +27,10 @@ h1 {
   width: 100%;
 }
 
+#entryform > div {
+  margin-bottom: 10px;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 900px;
