--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,10 @@ h1 {
   text-align: right;
 }
 
+.align-center {
+  align-items: center;
+}
+
 header {
   background-color: #562b81;
   color: white;
@@ -56,6 +60,7 @@ textarea {
   border: none;
   padding: 5px 10px;
   margin: 15px 0;
+  float: right;
 }
 
 .new {
@@ -66,6 +71,7 @@ textarea {
   padding: 5px 10px;
   margin: 15px 0;
   float: right;
+  text-decoration: none;
 }
 
 img {
@@ -111,15 +117,15 @@ nav {
   margin: 0 3%;
 }
 
-a {
+#nav-entries {
   background-color: #562b81;
   text-decoration: none;
 }
 
-a:link,
-a:visited,
-a:hover,
-a:active {
+#nav-entries:link,
+#nav-entries:visited,
+#nav-entries:hover,
+#nav-entries:active {
   color: white;
 }
 
@@ -139,6 +145,16 @@ h2 {
   margin: inherit;
 }
 
-i:hover {
+i:hover,
+a:hover,
+button:hover {
   cursor: pointer;
+}
+
+#edit-anchor {
+  padding: 5px 10px;
+  margin: 15px 0;
+  text-decoration: underline;
+  color: #e36262;
+  float: left;
 }
