Styled modal popup for delete entry confirmation.

--- a/css/layout.css
+++ b/css/layout.css
@@ -8,6 +8,11 @@
   padding: 0 1.5rem;
 }
 
+.container-modal {
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
 main {
   margin: 0 auto;
   padding: 2% 0;
