--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ h1 {
   font-family: "Proza Libre", sans-serif;
 }
 
+.container-modal {
+  font-family: "Proza Libre", sans-serif;
+}
+
 .text-center {
   text-align: center;
 }
@@ -20,6 +24,10 @@ h1 {
 
 .align-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 header {
@@ -157,4 +165,49 @@ button:hover {
   text-decoration: underline;
   color: #e36262;
   float: left;
+}
+
+#cancel {
+  float: left;
+  background-color: #b6b6b6;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+
+#confirm {
+  float: right;
+  background-color: #dc2525;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+
+#popup {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgb(0 0 0 / 80%);
+}
+
+#modal {
+  position: relative;
+  top: 40%;
+  padding: 5% 0;
+  margin: 0 20%;
+  border-radius: 10px;
+}
+
+p {
+  margin: 0;
+}
+
+.mb {
+  margin-bottom: 10px;
+}
+
+.ms {
+  margin: 0 10px;
 }
